Calendars with very long names hide the organizer in the CompEditor
One of my calendars has very, very long name. In turn in the CompEditor the field for showing calendars is very long.
In that window, whenever I select Organizer, Evolution shows … as Organizer and I thought the CUA does not allow me to select organizer. In fact, the organizer was selected, but the selection was not rendered “due the lack of space”.
Please make sure, that there is some minimal horizontal space, used to render the selected organizer, so that users do not get the impression, that Organizer cannot be set.