I#1901 - Calendars with very long names hide the organizer in the CompEditor

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1901