src/calendar/gui/e-comp-editor-page-general.c
@@ -1330,11 +1330,13 @@ ecep_general_constructed (GObject *object)
 	page_general->priv->organizer_hbox = widget;
 
 	widget = e_ellipsized_combo_box_text_new (FALSE);
+	e_ellipsized_combo_box_text_set_max_natural_width (E_ELLIPSIZED_COMBO_BOX_TEXT (widget), 100);
 	g_object_set (G_OBJECT (widget),
 		"hexpand", TRUE,
 		"halign", GTK_ALIGN_FILL,
 		"vexpand", FALSE,
 		"valign", GTK_ALIGN_START,
+		"width-request", 100,
 		NULL);
 	gtk_box_pack_start (GTK_BOX (page_general->priv->organizer_hbox), widget, TRUE, TRUE, 0);
 	gtk_widget_show (widget);
@@ -1374,12 +1376,14 @@ ecep_general_constructed (GObject *object)
 	widget = e_source_combo_box_new (
 		e_shell_get_registry (shell),
 		page_general->priv->source_extension_name);
-	e_source_combo_box_set_show_colors (E_SOURCE_COMBO_BOX (widget), TRUE);
 	g_object_set (G_OBJECT (widget),
 		"hexpand", TRUE,
 		"halign", GTK_ALIGN_FILL,
 		"vexpand", FALSE,
 		"valign", GTK_ALIGN_START,
+		"width-request", 100,
+		"max-natural-width", 100,
+		"show-colors", TRUE,
 		NULL);
 	gtk_box_pack_start (GTK_BOX (page_general->priv->source_and_color_hbox), widget, TRUE, TRUE, 0);
 	gtk_widget_show (widget);
